# AI

./: (전이학습 추가)[AI_Essential]_2일차_교안_코드 (1).ipynb  [AI_Essential]_1일차_교안_코드 (1).ipynb  [AI_Essential]_3일차_교안_코드 (1).ipynb  gpt_help.md  llm.md  note.md  readme.md
AIE/: 1일차_교안_코드.ipynb  2일차_교안_코드(전이학습추가).ipynb  3일차_교안_코드.ipynb
GPT/: CLIP.md  CLIP평가.md  CLIP평가2.md  GeLU.md  KL-divergence.md  LoRA.md  LoRA_MobileCLIP.md  LoRA_mclip_loss.md  LoRA_mclip_loss2.md  MobileCLIP.md  Pytorch_to_CoreML.md  ViT.md  YOLOv3_ft.md  all_code.py  coreml이후.md  dataset_for_vision.md  ensemble.md  ensemble_mobileclip.md  finetune_MobileCLIP.md  finetune_MobileCLIP_0.md  finetune_MobileCLIP_1.md  finetune_MobileCLIPx.md  finetune_OpenCLIP.md  mobilenetv2_2.md  mobilenetv4.md  mobilenetv4_2.md  mobilenetv4_3.md  mobilenetv4_4.md  mobilenetv4_5.md  prompt_tuning.md  to_coreml.md  torch.cuda.amp.autocast.md  마무리하자_01.md  마무리하자_02.md  마무리하자_03.md  보고서.md  비교.md  성능평가.md  시각화.md  이미지전처리.md  (+8 more)
VOC/: 01.md  01.py  02.md  02.py
agent/: handlers.py  onboarding-agent-monorepo-v0.2.md  onboarding-agent-v0.3-vllm-switch-KR.md  onboarding-agent-v0.3-vllm-switch.md  onboarding-agent-v0.4-adapter-KR .md  onboarding-agent-v0.4-adapter-KR.md  onboarding-agent-v0.4-adapter-patch-KR.md  scenario_loader_utils.py  server_skeleton_lang_graph_ollama_v_0.md  uml.md  다국어.md  두번째.md  세번째_0810.md  초안.js  초안.md
agent/0815/: 00_GraphRAG.md  01.md  helm.md  (+6 more)
agent/0816/onboarding-agent 6/mobile/android/localllm/src/main/cpp/: CMakeLists.txt  llama_bridge_jni.cpp
(+182 files in other folders)
